--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body id="home">
-    <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
-        <div class="container">
+    <nav class="nav_blur navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-50">
+        <div class="container ">
             <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
                 <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
                 Simcha Lapp
