--- a/project2-sass/project2.html
+++ b/project2-sass/project2.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="upper-bg">
-            <img src="/images/Path 15.png" alt="pink background">
+            <img src="../images/Path 15.png" alt="pink background">
         </div>
   
         <div class="form-container">
