--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img cardimg"><img src="./images/money1.jpg" alt=""></div>
+                <div class="project_card_img cardimg"><img src="./images/coins.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Currency Exchange</h3>
                     <p>Modern and clean sign in for an online currrency exchange. Built with HTML, CSS, and Bootstrap.
@@ -143,7 +143,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/project6_images/Rectangle 506-1.png" alt=""></div>
+                <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Project 6</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
