--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
 <body id="home">
     <header class="nav_container sticky-top">
-        <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary bg-opacity-50">
-            <div class="container">
-                <img src="./images/logo.png" alt="Logo" class="ms-5 logo">
-                <a class="navbar-brand ms-md-3" href="index.html">
-                    Simcha Lapp
+        <nav class="navbar navbar-expand-lg sticky-top">
+            <div class="container align-items-center justify-content-center ">
+                
+                <a class="navbar-brand text-white" href="index.html">
+                <div></div>
+                Simcha Lapp
                 </a>
 
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
@@ -31,9 +32,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav gap-2 ms-auto text-center">
+                    <ul class="navbar-nav gap-2 ms-auto text-center ">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                            <a class="nav-link" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#my_projects">My Projects</a>
