--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap&family=Oxanium:wght@200..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://kit.fontawesome.com/8612f94a58.js" crossorigin="anonymous"></script>
@@ -20,22 +20,25 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-              <a class="navbar-brand d-flex align-items-center gap-2 text-white" href="#">
-                <div class="logo"> <img src="./images/logo.png" alt="logo"></div>
-                Simcha Lapp</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
-                  <a class="nav-link" href="#home">Home</a>
-                  <a class="nav-link" href="#aboutMe_section">About Me</a>
-                  <a class="nav-link" href="#projects">Projects</a>
-                  <a class="nav-link" href="#contact_section">Contact</a>
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white" href="#">
+                    <div class="logo"> <img src="./images/logo.png" alt="logo"></div>
+                    Simcha Lapp
+                </a>
+                <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto text-center">
+                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="#aboutMe_section">About Me</a>
+                        <a class="nav-link" href="#projects">Projects</a>
+                        <a class="nav-link" href="#contact_section">Contact</a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <section id="hero_section">
@@ -45,7 +48,7 @@
             </div>
 
             <div class="hero_text">
-                <h1 class="hero_header josefin-bold">Welcome To My Portfolio</h1>
+                <h1 class="hero_header">Welcome To My Portfolio</h1>
                 <p class="header_text josefin-light">Here you will find information about me, past projects I have
                     worked on,
                     and be able to reach out and contact me in case you want to work together. Looking foward to hearing
@@ -58,9 +61,8 @@
         <div class="aboutMe_container">
             <div class="aboutMe_wrapper">
                 <div class="aboutMe_text">
-                    <h2 class="josefin-bold">About Me</h2>
-                    <p class="josefin-light">I am studying to be a fullstack web developer with a focus on beautiful and
-                        visually complex designs. As of now, I have learned HTML, CSS, SASS, and Bootstrap. I have also
+                    <h2 class="oxanium-600">About Me</h2>
+                    <p class="josefin-light">I am studying to be a fullstack web developer with a focus on visually complex, responsive, and interactive designs. As of now, I have learned HTML, CSS, SASS, and Bootstrap. I have also
                         done some studying of UI design and am familiar with Figma and Adobe Illustrator.
                     </p>
                     <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp CV">Download my
@@ -84,14 +86,14 @@
     </section>
 
     <section id="projects" class="project_section">
-        <h2 class="project_header josefin-bold">My Projects</h2>
+        <h2 class="project_header oxanium-600">My Projects</h2>
 
         <div class="project_card_area">
 
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/package.jpg" alt="" class="cardimg"></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Delivery Company Homepage</h3>
+                    <h3 class="project_card_title oxanium-600">Delivery Company Homepage</h3>
                     <p class="josefin-light"> class="josefin-light"Lorem, ipsum dolor sit amet consectetur adipisicing
                         elit.
                         <p />
@@ -102,7 +104,7 @@
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/Coffee.png" alt="" class="cardimg"></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Coffee Coupon Sign Up</h3>
+                    <h3 class="project_card_title oxanium-600">Coffee Coupon Sign Up</h3>
                     <p class="josefin-light"> A clean and beautiful sign up to receive a coupon for a free coffee.
                         <p />
                         <button class="btn_styling"><a href="./html/coffeeProjectPage.html">Project Page</a></button>
@@ -112,7 +114,7 @@
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Travel Agency Contact Page</h3>
+                    <h3 class="project_card_title oxanium-600">Travel Agency Contact Page</h3>
                     <p class="josefin-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <button class="btn_styling"><a href="./html/travelProjectPage.html">Project Page</a></button>
                 </div>
@@ -121,7 +123,7 @@
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/coding_background.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Coding Course Sign Up</h3>
+                    <h3 class="project_card_title oxanium-600">Coding Course Sign Up</h3>
                     <p class="josefin-light">A sign up for a coding course with a bright and abstract design. Built with
                         HTML, CSS, and SASS.
                     </p>
@@ -132,7 +134,7 @@
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/handshake.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Consulting Firm Contact Page</h3>
+                    <h3 class="project_card_title oxanium-600">Consulting Firm Contact Page</h3>
                     <p class="josefin-light">A funky contact page for a consulting firm. Built with HTML, CSS, Bootstrap
                         and SASS.</p>
                     <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
@@ -142,7 +144,7 @@
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/mall.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Gift Card Sign Up Page</h3>
+                    <h3 class="project_card_title oxanium-600">Gift Card Sign Up Page</h3>
                     <p class="josefin-light">A summery and young sign up page. Built with HTML, CSS, and SASS.</p>
                     <button class="btn_styling"><a href="./html/giftcardProjectPage.html">Project Page</a></button>
                 </div>
@@ -152,7 +154,7 @@
                 <div class="project_card_img"><img src="./images/basketball.jpg" alt=""></div>
 
                 <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Basketball League Login Page</h3>
+                    <h3 class="project_card_title oxanium-600">Basketball League Login Page</h3>
                     <p class="josefin-light"> A youthful and fun login page for a summer basketball league. Built
                         with HTML and CSS.</p>
                     <button class="btn_styling"><a href="./html/baskeballProjectPage.html">Project Page</a></button>
@@ -162,7 +164,7 @@
             <div class="project_card" id="project_card3">
                 <div class="project_card_img"><img src="./images/tiger.jpg" alt="tiger" class="cardimg"></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Zoo Newsletter</h3>
+                    <h3 class="project_card_title oxanium-600">Zoo Newsletter</h3>
                     <p class="josefin-light">An interesting and outdoorsy newsletter sign up for a zoo. Built with HTML
                         and CSS.</p>
                     <button class="btn_styling"><a href="./html/zooProjectPage.html">Project Page</a></button>
@@ -172,7 +174,7 @@
             <div class="project_card">
                 <div class="project_card_img cardimg"><img src="./images/coins.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Currency Exchange</h3>
+                    <h3 class="project_card_title oxanium-600">Currency Exchange</h3>
                     <p class="josefin-light">Modern and clean sign in for an online currrency exchange. Built with HTML,
                         CSS, and Bootstrap.
                     </p>
@@ -184,9 +186,9 @@
 
     <section id="contact_section">
         <div class="contact_container">
-            <h2>Contact Me</h2>
-            <form action="" class="contact_form">
-                <div class="contact_field">
+            <h2 class="oxanium-600">Contact Me</h2>
+            <form action="" class="contact_form josefin-light">
+                <div class="contact_field ">
                     <input type="text" placeholder="Name" class="contact_input">
                 </div>
 
